--- a/packages/client/templates/dev.html
+++ b/packages/client/templates/dev.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module">
+    import '@vuepress/client/app'
+  </script>
+</body>
+</body>
+
 </html>
